# elastic-exam

./: .gitignore  LICENSE  README.md  config.py  create_db.py  main.py  pyproject.toml  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/app/: settings.py  urls.py
app/appdemo/: admin.py  documents.py  router.py
app/appdemo/dataclasses/: content.py  document.py
app/appdemo/migrations/: 0001_initial.py  0002_chunkgroup_page.py
app/appdemo/models/: base.py  container.py  resource.py
app/appdemo/modules/: content.py
app/appdemo/serializers/: search_schema.py
app/appdemo/services/: embedding.py
